--- a/src/app/home/components/home/home.component.html
+++ b/src/app/home/components/home/home.component.html
@@ -1,1 +1,45 @@
-<p>home works!</p>
+<div class="container">
+    <!-- Orders Module -->
+    <div class="card text-center my-3">
+        <div class="card-header">
+          <h4>Orders Module</h4>
+        </div>
+        <div class="card-body">
+          <h5 class="card-title"></h5>
+          <p class="card-text">In this component you will be able to create, Update, edit and delete orders from de system.</p>
+          <p class="card-text">
+              <fa-icon [icon]="faDollyFlatbed" class="fa-3x"></fa-icon>
+          </p>
+          <a routerLink="/admin/orders/orders-table" class="btn btn-primary">Go to Orders module</a>
+        </div>
+    </div>
+    <!-- Products Module -->
+    <div class="card text-center my-3">
+        <div class="card-header">
+          <h4>Products Module</h4>
+        </div>
+        <div class="card-body">
+          <h5 class="card-title"></h5>
+          <p class="card-text">In this component you will be able to create, Update, edit and delete Products from de system.</p>
+          <p class="card-text">
+              <fa-icon [icon]="faShoppingCart" class="fa-3x"></fa-icon>
+          </p>
+          <a routerLink="/admin/products" class="btn btn-primary">Go to Products module</a>
+        </div>
+    </div>
+    <!-- Users Module -->
+    <div class="card text-center my-3">
+        <div class="card-header">
+          <h4>Users Module</h4>
+        </div>
+        <div class="card-body">
+          <h5 class="card-title"></h5>
+          <p class="card-text">In this component you will be able to create, Update, edit and delete Users from de system.</p>
+          <p class="card-text">
+              <fa-icon [icon]="faUsers" class="fa-3x"></fa-icon>
+          </p>
+          <a routerLink="/admin/users" class="btn btn-primary">Go to Users module</a>
+        </div>
+    </div>
+
+</div>
