--- a/src/app/shared/components/navbar/navbar.component.html
+++ b/src/app/shared/components/navbar/navbar.component.html
@@ -12,42 +12,8 @@
       <span class="navbar-toggler-icon"></span>
     </button>
 
-    <a class="navbar-brand py-0" href="#">
-      <img
-        class="logo"
-        src="../../../../assets/Elysian-isotipo.svg"
-        alt=""
-        width="30"
-        height="24"
-      />
+    <a class="navbar-brand py-0 text-danger mr-1 fw-bold fs-2" href="https://davidcz94.github.io/" target="_blank">
+      DCZ94
     </a>
-
-    <button
-      class="navbar-toggler"
-      type="button"
-      data-bs-toggle="collapse"
-      data-bs-target="#navbarTogglerDemo02"
-      aria-controls="navbarTogglerDemo02"
-      aria-expanded="false"
-      aria-label="Toggle navigation"
-    >
-      <span class="navbar-toggler-icon"></span>
-    </button>
-
-    <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
-      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-        <li class="nav-item">
-          <a class="nav-link" aria-current="page" href="#">Home</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Link</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#" tabindex="-1" aria-disabled="true"
-            >Disabled</a
-          >
-        </li>
-      </ul>
-    </div>
   </div>
 </nav>
