--- a/src/app/shared/components/side-nav/side-nav.component.html
+++ b/src/app/shared/components/side-nav/side-nav.component.html
@@ -11,11 +11,12 @@
     </div>
     
     <hr class="my-0">
-    
-    <a class="w-75 p-3" routerLink="/admin/home" routerLinkActive="active">Home</a>
-    <a class="w-75 p-3" routerLink="/admin/products" routerLinkActive="active" >Products</a> 
-    <a class="w-75 p-3" routerLink="/admin/users" routerLinkActive="active">Users</a>
-    <a class="w-75 p-3" routerLink="/admin/orders/orders-table" routerLinkActive="active">Orders</a>
+    <div class="my-3">
+      <a routerLink="/admin/home" routerLinkActive="active">Home</a>
+      <a routerLink="/admin/orders/orders-table" routerLinkActive="active">Orders</a>
+      <a routerLink="/admin/products" routerLinkActive="active" >Products</a> 
+      <a routerLink="/admin/users" routerLinkActive="active">Users</a>
+    </div>
   </div>
   <div class="container">
     <button (click)="logOut(sideNav, main)" class="btn btn-outline-secondary w-25">
