isActive for products added, and instruction on sign-in added

--- a/src/app/auth/components/sing-in/sing-in.component.html
+++ b/src/app/auth/components/sing-in/sing-in.component.html
@@ -1,5 +1,6 @@
 <div class="row mx-auto my-5">
   <div class="col-md-4 mx-auto">
+    <!-- Sign-in card -->
     <div class="card">
       <div class="card-reader mx-auto mt-3">
         <h4>Sign-in</h4>
@@ -12,7 +13,7 @@
               type="text"
               name="email"
               class="form-control"
-              placeholder="email"
+              placeholder="Email"
               autofocus
               required
             />
@@ -69,6 +70,32 @@
             Sign-up
           </button>
         </div>
+      </div>
+    </div>
+    <!-- Instructions card -->
+    <div class="card text-center">
+      <div class="card-header">
+        
+      </div>
+      <div class="card-body">
+        <h5 class="card-title">Please read this before using the Products app and press Sign-in button.</h5>
+        <p class="card-text">Fill the form with the next data.</p>
+      </div>
+      <div class="card-footer text-muted">
+        <ol class="list-group list-group-numbered">
+          <li class="list-group-item d-flex justify-content-between align-items-start">
+            <div class="m-auto">
+              <div class="fw-bold">Email</div>
+              root@undefined.sh
+            </div>
+          </li>
+          <li class="list-group-item d-flex justify-content-between align-items-start">
+            <div class="m-auto">
+              <div class="fw-bold">Password</div>
+              root
+            </div>
+          </li>
+        </ol>
       </div>
     </div>
   </div>
