--- a/src/app/products/components/create-product/create-product.component.html
+++ b/src/app/products/components/create-product/create-product.component.html
@@ -119,6 +119,19 @@
               placeholder="Tags"
             />
           </div>
+          <!-- Is Active input -->
+          <div class="form-group form-check form-switch my-2">
+            <input 
+              formControlName="isActive" 
+              type="checkbox" 
+              name="isActive"
+              class="form-check-input" 
+              value="true" 
+              id="isActive">
+            <label class="form-check-label" for="isActive">
+              Is active
+            </label>
+          </div>
           <!-- Upload product photos -->
           <div class="upLoadProductImageDiv form-group m-2 mb-3 text-center">
             <ngx-dropzone (change)="onSelect($event)">
