--- a/src/app/products/components/product-detail/product-detail.component.html
+++ b/src/app/products/components/product-detail/product-detail.component.html
@@ -133,7 +133,19 @@
                   [placeholder]="product.tags"
                 />
               </div>
-  
+              <!-- Is Active input -->
+              <div class="form-group form-check form-switch my-2">
+                <input 
+                  formControlName="isActive" 
+                  type="checkbox" 
+                  name="isActive"
+                  class="form-check-input" 
+                  [value]="product.isActive" 
+                  id="isActive">
+                <label class="form-check-label fw-bold" for="isActive">
+                  Is active
+                </label>
+              </div>
               <div class="text-center">
                 <button
                   [disabled]="form.invalid"
@@ -145,10 +157,10 @@
                   Save
                   <fa-icon [icon]="faSave"></fa-icon>
                 </button>
-                <button (click)="deleteProduct(product._id)" class="btn btn-danger w-50 m-2">
+<!--                 <button (click)="deleteProduct(product._id)" class="btn btn-danger w-50 m-2">
                   Delete this product 
                   <fa-icon [icon]="faTrashAlt"></fa-icon>
-                </button>
+                </button> -->
               </div>
             </form>
             <hr class="w-50 mx-auto">
