IsAdmin on sign in componen added, and delete buttom for admin users adjusted

--- a/src/app/users/components/users/users.component.html
+++ b/src/app/users/components/users/users.component.html
@@ -20,7 +20,7 @@
             [(ngModel)]="search"
             />
     </div>
-    <!-- Table products -->
+    <!-- Users Table -->
     <div class="table-responsive">
       <table class="table table-striped">
           <thead>
