--- a/src/app/users/components/user-detail/user-detail.component.html
+++ b/src/app/users/components/user-detail/user-detail.component.html
@@ -127,13 +127,15 @@
         </button>
       </div>
     </form>
-    <div class="text-center">
+    <!-- Delete buttom -->
+    <div *ngIf="!user.isAdmin" class="text-center">
       <button (click)="deleteUser(user._id)" class="btn btn-danger w-50 m-2">
                 Delete this user 
                 <fa-icon [icon]="faTrashAlt"></fa-icon>
       </button>
     </div>
     <hr class="w-50 mx-auto" />
+    <!-- Back buttom -->
     <div class="text-center">
       <button
         (click)="goToUsersTable()"
