Environment variables adjustes. Sign in and sign up adjusted

--- a/src/app/auth/components/sing-in/sing-in.component.html
+++ b/src/app/auth/components/sing-in/sing-in.component.html
@@ -92,7 +92,7 @@
           <li class="list-group-item d-flex justify-content-between align-items-start">
             <div class="m-auto">
               <div class="fw-bold">Password</div>
-              root
+              1234qwer
             </div>
           </li>
         </ol>
