--- a/src/app/home/components/home/home.component.html
+++ b/src/app/home/components/home/home.component.html
@@ -22,7 +22,7 @@
           <h5 class="card-title"></h5>
           <p class="card-text">In this component you will be able to create, Update, edit and delete Products from de system.</p>
           <p class="card-text">
-              <fa-icon [icon]="faShoppingCart" class="fa-3x"></fa-icon>
+              <fa-icon [icon]="faBoxOpen" class="fa-3x"></fa-icon>
           </p>
           <a routerLink="/admin/products" class="btn btn-primary">Go to Products module</a>
         </div>
