--- a/src/app/shared/components/navbar/navbar.component.html
+++ b/src/app/shared/components/navbar/navbar.component.html
@@ -12,7 +12,7 @@
       <span class="navbar-toggler-icon"></span>
     </button>
 
-    <a class="navbar-brand py-0 text-danger mr-1 fw-bold fs-2" href="https://davidcz94.github.io/" target="_blank">
+    <a class="dcz94 navbar-brand py-0 mr-1 fw-bold fs-2" href="https://davidcz94.github.io/" target="_blank">
       DCZ94
     </a>
   </div>
