--- a/src/app/auth/components/sing-up/sing-up.component.html
+++ b/src/app/auth/components/sing-up/sing-up.component.html
@@ -7,19 +7,21 @@
       <div class="card-body">
         <form [formGroup]="form" (ngSubmit)="saveUser($event)">
           <!-- Name input -->
-          <div class="form-group my-2">
+          <div class="form-floating mb-3 my-2">
             <input
               formControlName="name"
               type="text"
               name="name"
               class="form-control"
               placeholder="name"
+              id="name"
               autofocus
               required
             />
+            <label for="name">Name</label>
           </div>
           <!-- Email input -->
-          <div class="form-group my-2">
+          <div class="form-floating mb-3 my-2">
             <input
               [class.is-invalid]="form.controls.email.invalid"
               formControlName="email"
@@ -27,11 +29,13 @@
               name="email"
               class="form-control"
               placeholder="email"
+              id="email"
               required
             />
+            <label for="email">Email</label>
           </div>
           <!-- Password -->
-          <div class="form-group my-2">
+          <div class="form-floating mb-3 my-2">
             <input
               [class.is-invalid]="isPasswordValid"
               formControlName="password"
@@ -39,15 +43,17 @@
               name="password"
               class="form-control"
               placeholder="Password"
+              id="password"
               required
             />
+            <label for="password">Password</label>
             <div id="validationServer03Feedback" class="invalid-feedback">
               The password must contain at least one letter, one number and six
               characters.
             </div>
           </div>
           <!-- PAsswor confirmation -->
-          <div class="form-group my-2">
+          <div class="form-floating mb-3 my-2">
             <input
               [class.is-invalid]="!isPasswordConfirmationValid"
               formControlName="passwordConfirmation"
@@ -57,6 +63,7 @@
               placeholder="Confirm your password"
               required
             />
+            <label for="passwordConfirmation">Password Confirmation</label>
             <div id="validationServer03Feedback" class="invalid-feedback">
               This field must match the password.
             </div>
