--- a/src/app/shared/components/side-nav/side-nav.component.scss
+++ b/src/app/shared/components/side-nav/side-nav.component.scss
@@ -20,11 +20,11 @@
         margin: auto;
     }
 
-    a{
+    .sidenavButton{
         padding: 8px 8px 8px 32px;
         text-decoration: none;
         font-size: 20px;
-        color: #818181;
+        color: #cacaca;
         display: block;
         transition: 0.3s;
     }
