Sign in form adjusted

--- a/src/app/auth/components/sing-in/sing-in.component.html
+++ b/src/app/auth/components/sing-in/sing-in.component.html
@@ -32,7 +32,7 @@
               id="password"
               required
             />
-            <label for="password">Email address</label>
+            <label for="password">Password</label>
           </div>
           <!-- Show Password check -->
           <div class="form-group form-check form-switch my-2" (click)="showPassword()">
