--- a/src/app/products/components/product-detail/product-detail.component.html
+++ b/src/app/products/components/product-detail/product-detail.component.html
@@ -135,12 +135,12 @@
               </div>
               <!-- Is Active input -->
               <div class="form-group form-check form-switch my-2">
-                <input 
-                  formControlName="isActive" 
-                  type="checkbox" 
+                <input
+                  formControlName="isActive"
+                  type="checkbox"
                   name="isActive"
-                  class="form-check-input" 
-                  [value]="product.isActive" 
+                  class="form-check-input"
+                  [value]="product.isActive"
                   id="isActive">
                 <label class="form-check-label fw-bold" for="isActive">
                   Is active
@@ -157,10 +157,12 @@
                   Save
                   <fa-icon [icon]="faSave"></fa-icon>
                 </button>
-<!--                 <button (click)="deleteProduct(product._id)" class="btn btn-danger w-50 m-2">
-                  Delete this product 
+<!--
+                <button (click)="deleteProduct(product._id)" class="btn btn-danger w-50 m-2">
+                  Delete this product
                   <fa-icon [icon]="faTrashAlt"></fa-icon>
-                </button> -->
+                </button>
+-->
               </div>
             </form>
             <hr class="w-50 mx-auto">
@@ -204,4 +206,3 @@
       </div>
     </div>
   </div>
-  
