angular version update to 12

--- a/src/app/auth/components/sing-in/sing-in.component.html
+++ b/src/app/auth/components/sing-in/sing-in.component.html
@@ -23,7 +23,7 @@
           <!-- Password input -->
           <div class="form-floating mb-3 my-2">
             <input
-              #passwordInput 
+              #passwordInput
               formControlName="password"
               type="password"
               name="password"
@@ -79,7 +79,7 @@
     <!-- Instructions card -->
     <div class="card text-center text-white bg-success">
       <div class="card-header">
-        
+
       </div>
       <div class="card-body">
         <h5 class="card-title">Please read this before using the Products app.</h5>
@@ -96,7 +96,7 @@
           <li class="list-group-item d-flex justify-content-between align-items-start">
             <div class="m-auto">
               <div class="fw-bold">Password</div>
-              1234qwer
+              root
             </div>
           </li>
         </ol>
